Finished, Available Equipment  and All Equipment  pages

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,4 +5,9 @@
 <div class="text-center">
     <h1>FAST Equipment Tool</h1>
     <p>Welcome to the FAST Equipment Tool. Here you can request IT equipment or view available items.</p>
+
+    <a class="btn btn-primary" asp-controller="Request" asp-action="RequestForm" >
+        Come To Request Equipment Page
+    </a>
+
 </div>
