--- a/Views/Request/RequestForm.cshtml
+++ b/Views/Request/RequestForm.cshtml
@@ -59,10 +59,10 @@
                                 <span asp-validation-for="EquipmentType" class="text-danger"></span>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group ">
                                 <label asp-for="RequestDetails">Details :</label>
-                                <input asp-for="RequestDetails" class="form-control" />
-                                <span asp-validation-for="RequestDetails" class="text-danger"></span>
+                                <input asp-for="RequestDetails" class="form-control py-5" placeholder="Enter Optional Details :"/>
+                                <span asp-validation-for="RequestDetails" class="text-danger "></span>
                             </div>
 
                             <div class="form-group">
