--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <li class="nav-item"><a class="nav-link" asp-controller="Equipment" asp-action="AllEquipment">All Equipment Listing</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Equipment" asp-action="AvailableEquipment">Available Equipment</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Request" asp-action="RequestForm">Request Form</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Request" asp-action="Requests">Admin Page</a></li>
+                    @* <li class="nav-item"><a class="nav-link" asp-controller="Request" asp-action="Requests">Admin Page</a></li> *@
                 </ul>
             </div>
         </nav>
